[tool.poetry]
name = "cosmo"
version = "0.1.0"
description = "A web server I'm working on for fun."
authors = ["Kronifer <44979306+Kronifer@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
taskipy = "^1.9.0"

[tool.taskipy.tasks]
format = "black ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
