[tool.poetry]
name = "cosmo"
version = "0.4.6"
description = "A web server implementation that uses raw sockets."
authors = ["Kronifer <44979306+Kronifer@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kronifer/cosmo"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
uvloop = "^0.16.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
taskipy = "^1.9.0"
isort = "^5.10.1"

[tool.taskipy.tasks]
format = "black ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
